<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/str_search"/>
    <item
        android:id="@+id/savedFragment"
        android:icon="@drawable/ic_saved"
        android:title="@string/str_saved"/>
    <item
        android:id="@+id/addFragment"
        android:icon="@drawable/ic_add_circle"
        android:title="@string/str_add"/>
    <item
        android:id="@+id/messagesFragment"
        android:icon="@drawable/ic_messages"
        android:title="@string/str_messages"/>
    <item
        android:id="@+id/usersFragment"
        android:icon="@drawable/ic_users"
        android:title="@string/str_users"/>
</menu>