<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/color_for_screen">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:padding="16dp"/>
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_edit"
        android:layout_alignParentEnd="true"
        android:padding="16dp"
        app:tint="@color/color_blue"/>

    <TextView
        android:id="@+id/tv_tollbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/str_profile"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/exo2_medium"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:maxEms="20"/>
    
    <RelativeLayout
        android:id="@+id/rl_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_below="@id/tv_tollbar_title"
        android:layout_marginTop="80dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:strokeWidth="0dp"
            android:elevation="0dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="16dp"
            android:layout_marginTop="50dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="58dp"
                android:layout_marginBottom="16dp"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/tv_user_full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_sanjarbek_rahmatov"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/exo2_medium"/>

                <TextView
                    android:id="@+id/tv_user_position_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Android Developer 22-yosh"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    android:fontFamily="@font/exo2_medium"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="50dp"
            android:elevation="0dp"
            app:cardElevation="0dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/color_blue"
            android:layout_centerHorizontal="true">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/img_avatar"
                android:scaleType="centerCrop"/>
        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit_resume"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        app:cornerRadius="8dp"
        android:backgroundTint="@color/white"
        app:strokeWidth="0dp"
        android:elevation="0dp"
        app:elevation="0dp"
        app:rippleColor="@color/gray"
        android:layout_below="@id/rl_user_info"
        android:layout_marginTop="8dp"
        app:icon="@drawable/ic_receipt_edit"
        app:iconTint="@color/color_blue"
        app:iconSize="24dp"
        app:iconGravity="start"
        android:text="@string/str_edit_resume"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/exo2_medium" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_resume_download"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        app:cornerRadius="8dp"
        android:backgroundTint="@color/white"
        app:strokeWidth="0dp"
        android:elevation="0dp"
        app:elevation="0dp"
        app:rippleColor="@color/gray"
        android:layout_below="@id/btn_edit_resume"
        android:layout_marginTop="8dp"
        app:icon="@drawable/ic_document_download"
        app:iconTint="@color/color_blue"
        app:iconSize="24dp"
        app:iconGravity="start"
        android:text="@string/srt_resume_download"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/exo2_medium" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit_language"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        app:cornerRadius="8dp"
        android:backgroundTint="@color/white"
        app:strokeWidth="0dp"
        android:elevation="0dp"
        app:elevation="0dp"
        app:rippleColor="@color/gray"
        android:layout_below="@id/btn_resume_download"
        android:layout_marginTop="8dp"
        app:icon="@drawable/ic_global_edit"
        app:iconTint="@color/color_blue"
        app:iconSize="24dp"
        app:iconGravity="start"
        android:text="@string/str_edit_language"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/exo2_medium" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit_theme"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        app:cornerRadius="8dp"
        android:backgroundTint="@color/white"
        app:strokeWidth="0dp"
        android:elevation="0dp"
        app:elevation="0dp"
        app:rippleColor="@color/gray"
        android:layout_below="@id/btn_edit_language"
        android:layout_marginTop="8dp"
        app:icon="@drawable/ic_moon"
        app:iconTint="@color/color_blue"
        app:iconSize="24dp"
        app:iconGravity="start"
        android:text="@string/str_edit_theme"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/exo2_medium" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        app:cornerRadius="8dp"
        android:backgroundTint="@color/light_red"
        app:strokeWidth="1dp"
        app:strokeColor="@color/dark_red"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:text="@string/str_log_out"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/exo2_medium"
        app:icon="@drawable/ic_log_out"
        app:iconGravity="textStart"
        app:iconSize="24dp"
        app:iconTint="@color/white"/>


</RelativeLayout>